# is3106-project-backend

./: .dockerignore  .env.dev  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  ntucres.json  setup.cfg
.github/workflows/: main.yml
is3106backend/: Dockerfile  manage.py  requirements.txt
is3106backend-repo/is3106backend/: urls.py
is3106backend-repo/scripts/: generate_requirements.sh
is3106backend/appusers/: models.py
is3106backend/appusers/migrations/: 0001_initial.py
is3106backend/auth/migrations/: 0002_auto_20200827_1049.py
is3106backend/groupbuys/: admin.py  apps.py  models.py  serializers.py  views.py
is3106backend/groupbuys/migrations/: 0001_initial.py
is3106backend/is3106backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
is3106backend/orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
is3106backend/orders/migrations/: 0001_initial.py  0002_remove_groupbuy_status.py  0003_auto_20200909_0319.py  0004_auto_20200909_0338.py  0005_auto_20200909_0504.py  0006_auto_20200909_0613.py  0007_auto_20200909_1446.py  0008_auto_20200909_1653.py
is3106backend/recipes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
is3106backend/recipes/migrations/: 0001_initial.py  0002_auto_20200908_1331.py  0003_auto_20200908_1418.py  0004_auto_20200908_1622.py  0005_auto_20200909_0202.py  0006_auto_20200909_0613.py  0007_auto_20200909_1446.py
is3106backend/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
is3106backend/users/migrations/: 0001_initial.py  0002_vendor.py  0003_auto_20200909_1446.py  0004_vendoruser.py
scripts/: generate_requirements.sh
