[metadata]
name = is3106backend
description = A Django app to power digiOrg.io backend
author = Tze Ming
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django ::  3.1  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 119
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
ignore = W504, W601, D200, D203, D213, D406, D407